--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "eslint ./server",
     "react-dev": "webpack -d --watch",
     "server": "nodemon ./server/index.js",
+    "generate-data": "node ./server/database/dataGenerator.js",
     "seed": "psql -d postgres -U student < schema.sql"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "pg": "^8.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
