--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dev": "webpack -d --watch",
     "server": "nodemon ./server/index.js",
     "generate-data": "node ./server/database/dataGenerator.js",
-    "seed": "psql -d postgres -U student < schema.sql"
+    "seed": "psql -d postgres -U student < schema.sql",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -26,15 +29,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "jest": "^25.5.4",
     "nodemon": "^2.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
