--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
     "underscore": "^1.10.2"
   },
   "devDependencies": {
