--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "lint": "eslint ./server",
+    "lint": "eslint --ext js,jsx .",
     "react-dev": "webpack -d --watch",
     "server": "nodemon ./server/index.js",
     "generate-data": "node ./server/database/dataGenerator.js",
