--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "moment": "^2.25.3",
     "pg": "^8.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
