--- a/Service/package.json
+++ b/Service/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "sleep 20 && node ./server/index.js",
     "lint": "eslint .",
     "react-dev": "webpack -d --watch",
     "server": "nodemon ./server/index.js",
