--- a/Service/package.json
+++ b/Service/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.6",
     "faker": "^4.1.0",
     "moment": "^2.25.3",
     "pg": "^8.0.3",
@@ -38,6 +39,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
