--- a/Service/package.json
+++ b/Service/package.json
@@ -39,6 +39,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -59,6 +60,11 @@
     "presets": [
       "@babel/env",
       "@babel/react"
+    ],
+    "plugins": [
+      [
+        "babel-plugin-styled-components"
+      ]
     ]
   }
 }
